--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <div class="mpColum">
             <div class="mpRow">
               <img src="./assets/img/mp1.svg" alt="" />
+              <div class="absolute">
+                <p><span>50$</span>per night</p>
+              </div>
             </div>
             <div class="mpRow">
               <div class="mpBox">
